<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Job Alley</string>
    <string name="or">OR</string>
    <string name="new_user_sign_up">New User? SIGN UP?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="address">Address</string>
    <string name="tel_no">Tel.no</string>
    <string name="education_level">Education Level</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="register_now">Register Now</string>
    <string name="_0123456789">0123456789</string>
    <string name="joyce123_gmail_com">joyce123@gmail.com</string>
    <string name="select_pdf">Select Pdf</string>
    <string name="pdf_title">Pdf Title</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="logo_pdf">logoPdf</string>
    <string name="back" />
    <string name="add_a_new_resume">Add a new resume</string>
    <string name="attact_file" />
    <string name="default_weh_client_id" />
    <string name="you_re_loggedin_as">You\'re LoggedIn as</string>
    <string name="logout">Logout</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="JobAlley">job Alley</string>
    <string name="next">Next</string>
    <string name="forgot_password2">FORGOT PASSWORD</string>
    <string name="send_email">Send Email</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">Lam Wai Hong</string>
    <string name="personal_detail" tools:ignore="TypographyEllipsis">Say something about yourself...</string>
    <string name="skill">Skills</string>
    <string name="education">Education</string>
    <string name="change_photo">Change Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_a">
        SONGKHLA: The reopening of two Thailand-Malaysia land border gates on April 1 will comply with standard operating procedures (SOP) to ensure that the safety and health of tourists and locals are always protected.
        Deputy Governor of Songkhla province, Amphon Pongsuwan, said the two border gates of Sadao (Songkhla province)-Bukit Kayu Hitam (Kedah) and Wang Prachan (Satun)-Wang Kelian (Perlis) will be reopened to fully vaccinated tourists from April 1.
        He said all tourists, who will be coming through the land border gate under the “Test Go” programme, will have to apply online for the “Thailand Pass” at least seven days before travel.
        Under the "Test  Go” programme, travellers also need to book a designated hotel in advance, as well as perform an RT-PCR test on the first day of arrival and a self-antigen test on the fifth day.
    </string>
    <string name="news_b">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_c">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_d">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_e">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_f">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_g">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_h">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_i">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="news_j">
        KOTA KINABALU: Sabahs Covid-19 cases continue to stabilise with daily infections on a downward trend.
        State Covid-19 spokesman Datuk Masidi Manjun said the state recorded 245 new cases on Sunday (March 27), 24 fewer than the 269 detected the day before.
        Masidi said almost all 27 districts in the state showed a decrease in the number of daily infections.
        Six districts – Kalabakan, Tongod, Nabawan, Kunak, Telupid and Semporna – recorded zero cases. he added.
        Masidi said five districts recorded a marginal increase in daily cases
        Only Kota Kinabalu, with 97 cases, saw a notable increase from Saturday.
        A total of 242 or 98.77% of the new patients were under Category 1 and 2, he said.
    </string>
    <string name="welcome_to_job_alley">Welcome to Job Alley</string>
    <string name="welcome_to_our_application_job_alley">Welcome to our application Job Alley</string>
    <string name="gradute_engineer">Gradute Engineer</string>
    <string name="neric_compat">Neric Compat</string>
    <string name="petaling_jaya">Petaling Jaya</string>
    <string name="myr_3_700_4_300_month">MYR 3,700 - 4,300 /Month</string>
    <string name="apply">Apply</string>
    <string name="save_image">save_image</string>
    <string name="search">Search</string>
    <string name="area_city_or_town">Area, City or Town</string>
    <string name="job_specialize">Job Specialize</string>
    <string name="textview">TextView</string>
    <string name="hello_my_user_welcome_and_thank_for_download_our_application_hope_that_you_have_a_nice_day_and_success_find_your_favorite_job_with_our_application">Hello, my user. Welcome and thank for download our application, hope that you have a nice day and success find your favorite job with our application.</string>
</resources>